# html-text

./: .gitignore  README.md  pyproject.toml
plainhtml/: __init__.py  core.py  parser.py  utils.py
tests/: test_parser.py
