[tool.poetry]
name = "plainhtml"
version = "0.2.2"
description = "Extract plain text from HTML"
readme = "README.md"
authors = ["Severin Simmler <s.simmler@snapaddy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = { version = "^5.1.0", extras = ["html_clean"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
